# llmud

./: .gitignore  README.md  pyproject.toml
chat-client/: package-lock.json  package.json
chat-client/src/: agent.ts  index.ts  mcp-tools.ts
rpg-dm-tools/: rpg_server.py  test_server.py
rpg-dm-tools/game_data/maps/: village.json
rpg-dm-tools/game_data/world/: creatures.json  geography.json  items.json  npcs.json  scenarios.json
rpg-dm-tools/tools/: __init__.py  character.py  dice.py  lore.py  movement.py  session.py
rpg-dm-tools/utils/: __init__.py  fuzzy.py  state.py  svg.py
web_client/: __init__.py  agent.py  app.py  mcp_client.py
