[project]
name = "rpg-dm-tools"
version = "0.1.0"
description = "MCP server providing tools for running a text-based roleplaying game"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
web = [
    "python-fasthtml>=0.12.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
rpg-dm-tools = "rpg_server:main"
rpg-web-client = "web_client.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rpg-dm-tools", "web_client"]

[tool.hatch.build.targets.sdist]
include = ["rpg-dm-tools/**", "web_client/**"]

[tool.hatch.build]
sources = ["rpg-dm-tools", "."]

[tool.uv]
package = true
